# mcs_b181

./: .codespellrc  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  chunk.cpp  chunk.h  format.sh  generate_packets_header.py  ids.cpp  ids.h  java_strings.cpp  java_strings.h  main.cpp  main_bridge.cpp  misc.cpp  misc.h  packet.cpp  packet.h  packet_gen_def.h  tokei.sh
bridge/: main_bridge.cpp
client/: chunk_cubic.cpp  chunk_cubic.h  connection.cpp  connection.h  entity.cpp  entity.h  game.cpp  game.h  gen_texture_ids.py  level.cpp  level.h  level_mesh.cpp  lightmap.cpp  lightmap.h  main_client.cpp  main_client.menu.cpp  migration_gl.h  shaders.cpp  shaders.h  state.h  task_timer.cpp  task_timer.h  texture_ids.h  texture_terrain.cpp  texture_terrain.h  textures.cpp  textures.h  time_blended_modifer.cpp  time_blended_modifer.h  touch.cpp  touch.h
client/entity/: entity.cpp  entity.h  entity_physics.cpp  entity_physics.h
client/entt/: .clang-format
client/entt/src/entt/entity/: registry.hpp
client/gpu/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  common.h  fence.cpp  fence.h  gpu.cpp  gpu.h  internal.h  pipeline.cpp  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  sampler.cpp  sampler.h  singleshot_command_buffer.cpp  singleshot_command_buffer.h  smolv_converter.cpp  subdiv_buffer.cpp  subdiv_buffer.h  test.cpp  texture.cpp  texture.h  vk_mem_alloc.cpp  vk_mem_alloc.h
client/gpu/smol-v/: smolv.cpp  smolv.h
client/gpu/volk/: 0001-KDevelop-workarounds.patch  README.md  volk.c  volk.h
client/gui/: debug_screen.cpp  main_client.menu.cpp  mc_gui.cpp  mc_gui.h  mc_gui_internal.h  panorama.cpp  panorama.h
client/lang/: lang.cpp  lang.h
client/shaders/: background.frag  background.frag.spv.h  background.vert  background.vert.spv.h  background_shader.cpp  background_shader.h  clouds.frag  clouds.vert  clouds_shader.cpp  clouds_shader.h  compile_shaders.sh  composite.frag  composite.vert  composite_shader.cpp  composite_shader.h  fbo.vert  fbo_blur.frag  fbo_out.frag  lightmap.glsl  pano.frag  pano.vert  shader_header.h  shaders.cpp  shaders.h  terrain.frag  terrain.frag.alpha_test.msl.h  terrain.frag.alpha_test.spv.h  terrain.frag.msl.h  terrain.frag.no_alpha_test.msl.h  terrain.frag.no_alpha_test.spv.h  terrain.frag.spv.h  terrain.vert  terrain.vert.msl.h  terrain.vert.spv.h  terrain_shader.cpp  terrain_shader.h
client/shaders/compiled/: background.frag.msl.h  background.frag.smolv.h  background.vert.msl.h  background.vert.smolv.h  clouds.frag.msl.h  clouds.frag.smolv.h  clouds.vert.msl.h  clouds.vert.smolv.h  composite.frag.msl.h  composite.frag.smolv.h  composite.vert.msl.h  composite.vert.smolv.h  terrain.frag.alpha_test.msl.h  terrain.frag.alpha_test.smolv.h  terrain.frag.depth_peel_0.msl.h  terrain.frag.depth_peel_0.smolv.h  terrain.frag.depth_peel_n.msl.h  terrain.frag.depth_peel_n.smolv.h  terrain.frag.no_alpha_test.msl.h  terrain.frag.no_alpha_test.smolv.h  terrain.frag.opaque.msl.h  terrain.frag.opaque.smolv.h  terrain.vert.msl.h  terrain.vert.smolv.h
client/sound/: miniaudio_impl.c  miniaudio_physfs.hpp  miniaudio_unifdef.h  sound_resources.cpp  sound_resources.h  sound_world.cpp  sound_world.h  stb_vorbis.c  stb_vorbis.h
client/sys/: device_state.cpp  device_state.h  device_state_apple.mm  device_state_fallback.cpp
cmake/: GetGitRevisionDescription.cmake  info.plist.in
docs/: README.md  wiki_vg_protocol_v17.html  wiki_vg_protocol_v17.mediawiki
sdl_net/: README.md
sdl_net/include/SDL3_net/: SDL_net.h
sdl_net/src/: SDL_net.c
server/: main_server.cpp
shared/: build_info.cpp.in  build_info.h  chunk.cpp  chunk.h  generate_packets_header.py  ids.cpp  ids.h  inventory.cpp  inventory.h  java_strings.cpp  java_strings.h  mcs_b181_projects.h  misc.cpp  misc.h  packet.cpp  packet.h  packet_gen_def.h
shared/cubiomes/: .clang-format  .gitattributes  CMakeLists.txt
shared/sdl_net/: .clang-format  README.md
shared/sdl_net/include/SDL3_net/: SDL_net.h
shared/sdl_net/src/: SDL_net.c  SDL_net.sym
shared/simplex_noise/: .clang-format
tetra/: CMakeLists.txt  README.txt  tetra.cpp  tetra.h
tetra/gui/: console.cpp
